Test CONFIG-2: Making sure ConfigParser works in main